[gd_scene load_steps=12 format=3 uid="uid://dr0tu4ea1313"]

[ext_resource type="Script" uid="uid://bjyywkkb36366" path="res://Player/Gateway/gateway_player.gd" id="1_1s7tf"]
[ext_resource type="Texture2D" uid="uid://ccjkpqq6lw2bx" path="res://Player/Gateway/player.png" id="2_j700q"]
[ext_resource type="PackedScene" uid="uid://csxiow13e80jm" path="res://Player/Gateway/gateway_gun.tscn" id="3_j700q"]
[ext_resource type="AudioStream" uid="uid://dm32lphcahr26" path="res://assets/sounds/sfx/Default/default_footsteps.wav" id="4_yyqln"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j700q"]
radius = 4.6875
height = 20.625

[sub_resource type="AtlasTexture" id="AtlasTexture_yyqln"]
atlas = ExtResource("2_j700q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0fay"]
atlas = ExtResource("2_j700q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng2n3"]
atlas = ExtResource("2_j700q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8posv"]
atlas = ExtResource("2_j700q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3su0l"]
atlas = ExtResource("2_j700q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ntmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyqln")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0fay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng2n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8posv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3su0l")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[node name="GatewayPlayer2D" type="CharacterBody2D" groups=["gateway", "player"]]
z_index = 1
collision_mask = 8
script = ExtResource("1_1s7tf")
metadata/_custom_type_script = "uid://bjyywkkb36366"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.51992e-06)
scale = Vector2(1.6, 1.6)
shape = SubResource("CapsuleShape2D_j700q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_4ntmi")
animation = &"walk"
autoplay = "idle"
frame_progress = 0.491109

[node name="GatewayGun" parent="." instance=ExtResource("3_j700q")]

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="FootstepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yyqln")

[connection signal="timeout" from="StepTimer" to="." method="_on_step_timer_timeout"]
